fixing overflow issue on ETH address

--- a/frontend/styles/partials/stickyFooter.scss
+++ b/frontend/styles/partials/stickyFooter.scss
@@ -12,4 +12,7 @@
 	padding: 16px 0;
 	width: 100%;
 	background: rgba(0,0,0,.5);
+	p{
+		overflow-wrap: break-word;
+	}
 }
